force-app/main/default/objects/Product2/fields/WC_Fault_Keywords__c.field-meta.xml
<CustomField>
    <fullName>WC_Fault_Keywords__c</fullName>
    <description>WC — Rich keywords for agents / Einstein / UI. Part suggestion uses Prompt Builder + Knowledge (see WC_SuggestPartAction); not used for catalogue text search.</description>
    <label>WC Fault Keywords</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>