force-app/main/default/objects/Product2/fields/WC_Labour_Charge_per_hour__c.field-meta.xml
<CustomField>
    <fullName>WC_Labour_Charge_per_hour__c</fullName>
    <description>WC — Labour rate per hour multiplied by ClaimItem labour hours for estimated amount.</description>
    <label>WC Labour Charge per Hour</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>