force-app/main/default/objects/Product2/fields/WC_Model_Compatibility__c.field-meta.xml
<CustomField>
    <fullName>WC_Model_Compatibility__c</fullName>
    <description>WC — Model names or codes this part applies to (optional filter for part suggestion).</description>
    <label>WC Model Compatibility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>