force-app/main/default/objects/Product2/fields/WC_Product_Amount__c.field-meta.xml
<CustomField>
    <fullName>WC_Product_Amount__c</fullName>
    <description>WC — List or baseline part price used with labour to derive claim estimated amount.</description>
    <label>WC Product Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>